--- a/text.html
+++ b/text.html
@@ -3,61 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text</title>
-    <style>
-        p {
-            font-family: Arial, Helvetica, sans-serif;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-        .video-title {
-            font-size: 18px;
-            font-weight: bold;
-            width: 280px;
-            line-height: 24px;
-            margin-bottom: 5px;
-        }
-
-        .video-stats {
-            font-size: 14px;
-            color: rgb(96, 96, 96);
-            margin-bottom: 20px;
-        }
-        .video-author {
-            font-size: 14px;
-            color: rgb(96, 96, 96);
-            margin-bottom: 20px;
-        }
-        .video-description {
-            font-size: 14px;
-            color: rgb(96, 96, 96);
-            width: 280px;
-            line-height: 22px;
-            margin-bottom: 100px;
-        }
-        .apple-text {
-            margin-bottom: 50px;
-            font-size: 14px;
-            background-color: rgb(227, 65, 64);
-            color: white;
-            text-align: center;
-            padding-top: 18px;
-            padding-bottom: 18px;
-        }
-        .span-example {
-            color: red;
-            margin-left: 12px;
-        }
-        .span-example:hover {
-            text-decoration: underline;
-        }
-        .shop-link {
-            cursor: pointer;
-        }
-        .shop-link:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Text Practice</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/text.css">
 </head>
 <body>
     <p class="video-title">
