--- a/youtube.html
+++ b/youtube.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>Youtube.com clone</title>
+    <style>
+        .thumbnail {
+            width: 300px;
+        }
+        .search-bar {
+            
+        }
+    </style>
 </head>
 <body>
-    <img src="thumbnail-1.webp" alt="video-1">
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1">
+    <input class="search-bar" type="text" placeholder="Search">
+    <button>Search</button>
 </body>
 </html>
