--- a/youtube.html
+++ b/youtube.html
@@ -7,15 +7,34 @@
     <style>
         .thumbnail {
             width: 300px;
+            display: block;
         }
         .search-bar {
             
         }
+        .video-title {
+            width: 300px;
+        }
+        .video-author {
+
+        }        
+        .video-stats {
+
+        }
     </style>
 </head>
 <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1">
     <input class="search-bar" type="text" placeholder="Search">
-    <button>Search</button>
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1">
+    
+    <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+    <p class="video-author">
+        Marques Brownlee
+    </p>
+    <p class="video-stats">
+        3.4M views 	&#183; 6 months ago
+    </p>
 </body>
 </html>
