--- a/exercises/9h.html
+++ b/exercises/9h.html
@@ -23,11 +23,25 @@
             width: 500px;
             border: none;
             border-radius: 30px;
-            box-shadow: 0px 1px 5px rgba(0,0,0, 0.25);
+            box-shadow: 0px 1px 6px rgba(0,0,0, 0.25);
             margin-top: 20px;
+            margin-bottom: 35px;
             /* margin-left: 440px; */
         }
-    </style>
+        .google-button {
+            background-color: rgb(245, 245, 245);
+            border: none;
+            font-size: 15px;
+            padding-top: 12px;
+            padding-bottom: 12px;
+            padding-left: 20px;
+            padding-right: 20px;
+            cursor: pointer;
+        }
+        .search-button {
+            margin-right: 10px;
+        }
+        </style>
 </head>
 <body>
     <div>
@@ -35,6 +49,10 @@
     </div>
     <div>
         <input type="text" placeholder="Search Google or type a URL" />
+    </div>
+    <div>
+        <button class="google-button search-button">Google Search</button>
+        <button class="google-button">I&apos;m Feeling Lucky</button>
     </div>
 </body>
 </html>
