--- a/youtube.html
+++ b/youtube.html
@@ -86,17 +86,25 @@
 
 
     <div class="video-preview">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="video-1">
-        
-        <p class="video-title">       
-            Try Not To Laugh Challenge #9
-        </p>
-        <p class="video-author">
-            Markiplier
-        </p>
-        <p class="video-stats">
-            19M views &#183; 4 years ago
-        </p>
+        <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="video-1">
+        </div>
+        <div>
+            <div class="channel-picture">
+                <img class="profile-picture" src="/channel-pictures/channel-2.jpeg" alt="">
+            </div>
+            <div class="video-info">
+            <p class="video-title">       
+                Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">
+                Markiplier
+            </p>
+            <p class="video-stats">
+                19M views &#183; 4 years ago
+            </p>
+        </div>
+        </div>
     </div>
     <div class="video-preview">
         <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="video-1">
