--- a/grid.html
+++ b/grid.html
@@ -6,6 +6,10 @@
     <title>Grid Practice</title>
 </head>
 <body style="padding-bottom: 1000px;">
+    <!-- the layout is more rigid than flexbox, 
+        the layout was determined first 
+        grid = rigid layout, flexbox = flexible layout -->
+        
     <div style="
         display: grid;
         grid-template-columns: 100px 100px;
