--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
     <div class="header">
@@ -33,7 +34,9 @@
             <img class="current-user-picture" src="channel-pictures/my-channel.jpg" alt="">
         </div>
     </div>
-
+    <div class="sidebar">
+        sidebar
+    </div>
     <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row">
