--- a/exercises/14a.html
+++ b/exercises/14a.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>14a Position fixed</title>
     <style>
-        .sticky {
+        body {
+            height: 3000px;
+        }
+        .bottom-right {
             background-color: black;
             color: white;
             position: fixed;
@@ -14,8 +17,8 @@
         }
     </style>
 </head>
-<body style="height: 3000px;">
-    <div class="sticky">
+<body>
+    <div class="bottom-right">
         bottom-right
     </div>
 </body>
