--- a/exercises/14b.html
+++ b/exercises/14b.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>14b</title>
     <style>
-        .sticky {
+        body {
+            height: 3000px;
+        }
+        .right-sidebar {
             background-color: green;
             color: white;
             position: fixed;
@@ -16,8 +19,8 @@
         }
     </style>
 </head>
-<body style="height: 3000px;">
-    <div class="sticky">
+<body>
+    <div class="right-sidebar">
         right-sidebar
     </div>
 </body>
