--- a/exercises/14c.html
+++ b/exercises/14c.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>14c</title>
     <style>
-        .sticky {
+        body {
+            height: 3000px;
+        }
+        .cover {
             background-color: rgb(0, 0, 0);
-            color: white;
             position: fixed;
             top: 0;
             right: 0;
@@ -16,9 +18,8 @@
         }
     </style>
 </head>
-<body style="height: 3000px;">
-    <div class="sticky">
-        entire black
+<body>
+    <div class="cover">
     </div>
 </body>
 </html>
