position absolute/relative

--- a/youtube.html
+++ b/youtube.html
@@ -30,7 +30,10 @@
         <div class="right-section">
             <img class="upload-icon" src="icons/upload.svg" alt="">
             <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
-            <img class="notifications-icon" src="icons/notifications.svg" alt="">
+            <div class="notifications-icon-container">
+                <img class="notifications-icon" src="icons/notifications.svg" alt="">
+                <div class="notifications-count">3</div>
+            </div>
             <img class="current-user-picture" src="channel-pictures/my-channel.jpg" alt="">
         </div>
     </div>
@@ -41,6 +44,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1">
+                <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div>
@@ -64,6 +68,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="video-1">
+                <div class="video-time">8:22</div>
             </div>
             <div class="video-info-grid">
                 <div>
@@ -86,6 +91,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="video-1">
+                <div class="video-time">9:13</div>
             </div>
             <div class="video-info-grid">
                 <div>
@@ -108,6 +114,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="video-1">
+                <div class="video-time">22:09</div>
             </div>
             <div class="video-info-grid">
                 <div>
@@ -129,6 +136,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="video-1">
+                <div class="video-time">11:17</div>
             </div>
             <div class="video-info-grid">
                 <div>
@@ -150,6 +158,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="video-1">
+                <div class="video-time">19:59</div>
             </div>
             <div class="video-info-grid">
                 <div>
