--- a/position.html
+++ b/position.html
@@ -10,6 +10,14 @@
     padding-top: 60px;
     padding-left: 80px;
     ">
+    <!-- position: fixed = placed in the browser window (like it is floating) -->
+    <!-- position: absolute = placed on the page -->
+    <!-- z-index default is 0, higher will appear infront of the elements. usually set to 100 -->
+    <!-- whenever a position absolute is placed inside a position FIXED element,
+        it will be placed relative to the position fixed element -->
+    <!-- whenever a position absolute is placed inside a position RELATIVE element,
+        it will be placed relative to the position relative element (instead of relative to the page) -->
+        
     <div style="
         background-color: black;
         color: white;
@@ -18,20 +26,42 @@
         left: 0;
         right: 0;
         height: 50px;
+        z-index: 100;
         ">
-        header</div>
+        header
+    </div>
+    <div style="
+        background-color: green;
+        color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        top: 50px;
+        width: 72px;
+        ">
+        sidebar
         <div style="
-            background-color: green;
+            position: absolute;
+            background-color: red;
             color: white;
-            position: fixed;
             top: 0;
-            left: 0;
-            bottom: 0;
-            top: 50px;
-            width: 72px;
+            right: 0;
             ">
-            sidebar
+            X
         </div>
+    </div>
+
+    <div style="
+        position: absolute;
+        background-color: red;
+        color: white;
+        top: 60px;
+        right: 10px;
+        ">
+        absolute
+    </div>
+
     <div style="
         background-color: lightblue;
         height: 200px;
@@ -44,8 +74,18 @@
         background-color: lightpink;
         height: 200px;
         width: 200px;
+        position: relative;
         ">
         div 2
+        <div style="
+            position: absolute;
+            background-color: black;
+            color: white;
+            bottom: 10px;
+            right: 10px;
+            ">
+            5:00
+        </div>
     </div>
 </body>
 </html>
