--- a/youtube.html
+++ b/youtube.html
@@ -47,6 +47,7 @@
                 <img class="current-user-picture" src="channel-pictures/my-channel.jpg" alt="">
             </div>
         </header>
+        
         <nav class="sidebar">
             <div class="sidebar-link">
                 <img src="icons/home.svg" alt="">
@@ -346,7 +347,7 @@
                       </div>
                       <div class="video-info">
                         <p class="video-title">
-                          Why Planes Don't Fly Over Tibet
+                          Why Planes Don&apos;t Fly Over Tibet
                         </p>
                         <p class="video-author">
                           RealLifeLore
@@ -369,7 +370,7 @@
                       </div>
                       <div class="video-info">
                         <p class="video-title">
-                          Inside The World's Biggest Passenger Plane
+                          Inside The World&apos;s Biggest Passenger Plane
                         </p>
                         <p class="video-author">
                           Tech Vision
@@ -415,7 +416,7 @@
                       </div>
                       <div class="video-info">
                         <p class="video-title">
-                          How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+                          How The World&apos;s Largest Cruise Ship Makes 30,000 Meals Every Day
                         </p>
                         <p class="video-author">
                           Business Insider
@@ -438,7 +439,7 @@
                       </div>
                       <div class="video-info">
                         <p class="video-title">
-                          Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+                          Dubai&apos;s Crazy Underwater Train and Other Things #Only in Dubai
                         </p>
                         <p class="video-author">
                           Destination Tips
@@ -461,7 +462,7 @@
                       </div>
                       <div class="video-info">
                         <p class="video-title">
-                          What would happen if you didn’t drink water? - Mia Nacamulli
+                          What would happen if you didn&apos;t drink water? - Mia Nacamulli
                         </p>
                         <p class="video-author">
                           TED-Ed
